--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
   <h1>Select a Theme</h1>
   <button id="apply-button">Apply</button>
   <div id="theme-grid">
-    <!-- Temalar buraya eklenecek -->
+    <!-- Themes will be uploaded to here from popup.js -->
   </div>
   <script src="popup.js"></script>
 </body>
